multi-panel update

--- a/eyeviz.ipynb
+++ b/eyeviz.ipynb
@@ -8,12 +8,12 @@
    "outputs": [],
    "source": [
     "import eyeviz\n",
+    "import eyeviz2\n",
     "import h5py\n",
     "import numpy as np\n",
     "import os\n",
     "import matplotlib.pyplot as plt\n",
-    "import ipywidgets as widgets\n",
-    "from ipywidgets import interact\n",
+    "import ipywidgets as widgets, interact, interactive, VBox, HBox, interactive_output\n",
     "import pandas as pd\n",
     "from IPython.display import display, clear_output\n",
     "from matplotlib.colors import LinearSegmentedColormap\n",
@@ -76,6 +76,75 @@
     "interact(ploteyew,patient=d1,eyeside=d2,tness=d3,gridpts=d4,\n",
     "         t=s1,opacity1=(0.0,1.0,0.1),opacity2=(0.0,1.0,0.1));"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19811245-55bb-4b53-a3be-e83ad3d30fe0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h5f = h5py.File(eyeviz.h5files[0],'r')\n",
+    "def ploteyew2(patient='070',eyeside='L',t=0,gridpts=640,tness='GCIPL',opacity1=1.0,opacity2=1.0):\n",
+    "    fig = eyeviz2.ploteye2(h5f,patient,eyeside,t,gridpts,tness,opacity1,opacity2)        \n",
+    "\n",
+    "d1 = widgets.Dropdown(options=eyeviz.numsunique,description='Patient',style={'description_width': 'initial'})\n",
+    "d2 = widgets.Dropdown(options=['L','R'],description='Eyeside',style={'description_width': 'initial'})\n",
+    "d3 = widgets.Dropdown(options=eyeviz.thickunique,description='Layer',value='GCIPL',style={'description_width': 'initial'})\n",
+    "d4 = widgets.Dropdown(options=eyeviz.yunique,description='Grid Pts',style={'description_width': 'initial'})\n",
+    "s1 = widgets.IntSlider(min=0,max=len(h5f['070/L'].keys())-1,description='Current Image #:',style={'description_width': 'initial'})\n",
+    "s2 = widgets.FloatSlider(value=1.0,min=0.0,max=1.0,step=0.1,description='Opacity 1:',style={'description_width': 'initial'})\n",
+    "s3 = widgets.FloatSlider(value=1.0,min=0.0,max=1.0,step=0.1,description='Opacity 2:',style={'description_width': 'initial'})\n",
+    "\n",
+    "def valued1_changed(change):\n",
+    "    global h5f\n",
+    "    h5f.close()\n",
+    "    h5f = h5py.File('data/'+change.new+'-'+d3.value+'.hdf5','r')\n",
+    "    if len(h5f.keys()) == 0:\n",
+    "        s1.max = 0\n",
+    "    elif d2.value not in h5f[change.new].keys():\n",
+    "        s1.max = 0\n",
+    "    else:\n",
+    "        s1.max = max(0,len(h5f[change.new+'/'+d2.value].keys())-1)\n",
+    "    s1.value = 0\n",
+    "d1.observe(valued1_changed, 'value')\n",
+    "\n",
+    "def valued2_changed(change):\n",
+    "    if len(h5f.keys()) == 0:\n",
+    "        s1.max = 0\n",
+    "    elif change.new not in h5f[d1.value].keys():\n",
+    "        s1.max = 0\n",
+    "    else:\n",
+    "        s1.max = max(0,len(h5f[d1.value+'/'+change.new].keys())-1)\n",
+    "    s1.value = 0\n",
+    "d2.observe(valued2_changed, 'value')\n",
+    "\n",
+    "def valued3_changed(change):\n",
+    "    global h5f\n",
+    "    h5f.close()\n",
+    "    h5f = h5py.File('data/'+d1.value+'-'+change.new+'.hdf5','r')\n",
+    "    if len(h5f.keys()) == 0:\n",
+    "        s1.max = 0\n",
+    "    elif d2.value not in h5f[d1.value].keys():\n",
+    "        s1.max = 0\n",
+    "    else:\n",
+    "        s1.max = max(0,len(h5f[d1.value+'/'+d2.value].keys())-1)\n",
+    "    s1.value = 0\n",
+    "d3.observe(valued3_changed, 'value')\n",
+    "\n",
+    "play = widgets.Play(value=0,min=0,max=s1.max,step=1,interval=1500,description=\"Press play\",disabled=False)\n",
+    "left_box = VBox([d1,d2,d3,d4])\n",
+    "middle_box = VBox([s1,s2,s3])\n",
+    "right_box = VBox([play])\n",
+    "controls = HBox([left_box, middle_box, right_box])\n",
+    "\n",
+    "plotwidget = interactive_output(ploteyew2, {'patient':d1,'eyeside':d2,'tness':d3,'gridpts':d4,\n",
+    "         't':s1,'opacity1':s2,'opacity2':s3});\n",
+    "\n",
+    "widgets.jslink((play, 'value'), (s1, 'value'))\n",
+    "totalwidget = widgets.VBox([controls,plotwidget])\n",
+    "display(totalwidget)"
+   ]
   }
  ],
  "metadata": {
@@ -94,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
