revise interact import

--- a/eyeviz.ipynb
+++ b/eyeviz.ipynb
@@ -13,7 +13,8 @@
     "import numpy as np\n",
     "import os\n",
     "import matplotlib.pyplot as plt\n",
-    "import ipywidgets as widgets, interact, interactive, VBox, HBox, interactive_output\n",
+    "import ipywidgets as widgets\n",
+    "from ipywidgets import interact, interactive, VBox, HBox, interactive_output\n",
     "import pandas as pd\n",
     "from IPython.display import display, clear_output\n",
     "from matplotlib.colors import LinearSegmentedColormap\n",
