add prelim note

--- a/eyeviz.ipynb
+++ b/eyeviz.ipynb
@@ -1,6 +1,33 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "ee0f1244-8e1b-4e7f-8752-9d349604886c",
+   "metadata": {},
+   "source": [
+    "# Instructions\n",
+    "\n",
+    "To produce the interactive graphics in this notebook, go up to the top menu and select Run -> Run All Cells.  This will generate two interactive graphics below.\n",
+    "\n",
+    "The first graphic will be a layered image with the bottom layer being an infrared image, the middle layer being an OCT image, and the top layer being the difference in visual field measurements for the OCT-plotted date vs baseline date.\n",
+    "\n",
+    "The second graphic is a sequence of images.  The first (left-most) image is a baseline image similar to the first graphic, and the second image shows the evolution in time of that same graphic.  The third and fourth images plot the decrease and increase in OCT measured values relative to baseline, respectively, as the middle layer of the image.\n",
+    "\n",
+    "Note:\n",
+    "* Both graphics have menus to select different data options, as well as to vary the opacity of the middle and top layers.\n",
+    "* There are interactive buttons to play an animation.  To play a time sequence of images, simply click on the play button."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9df05fb9-1ec9-4eb0-a685-ccd5dd53f54e",
+   "metadata": {},
+   "source": [
+    "## Importing libraries\n",
+    "The following cell will not produce any output"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "890da4c3-5399-4076-9e48-64fb21d07cd7",
@@ -22,6 +49,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "737d4284-e886-4654-81ff-120d5bcd2ad9",
+   "metadata": {},
+   "source": [
+    "## Graphic #1: the layered image"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e35e744a-6dfa-43ce-a26f-83c58067a519",
@@ -32,11 +67,13 @@
     "def ploteyew(patient='070',eyeside='L',t=0,gridpts=640,tness='GCIPL',opacity1=1.0,opacity2=1.0):\n",
     "    eyeviz.ploteye(h5f,patient,eyeside,t,gridpts,tness,opacity1,opacity2)\n",
     "    \n",
-    "d1 = widgets.Dropdown(options=eyeviz.numsunique,description='Patient')\n",
-    "d2 = widgets.Dropdown(options=['L','R'],description='Eyeside')\n",
-    "d3 = widgets.Dropdown(options=eyeviz.thickunique,description='Layer',value='GCIPL')\n",
-    "d4 = widgets.Dropdown(options=eyeviz.yunique,description='Grid Pts')\n",
-    "s1 = widgets.IntSlider(min=0,max=len(h5f['070/L'].keys())-1)\n",
+    "d1 = widgets.Dropdown(options=eyeviz.numsunique,description='Patient',style={'description_width': 'initial'})\n",
+    "d2 = widgets.Dropdown(options=['L','R'],description='Eyeside',style={'description_width': 'initial'})\n",
+    "d3 = widgets.Dropdown(options=eyeviz.thickunique,description='Layer',value='GCIPL',style={'description_width': 'initial'})\n",
+    "d4 = widgets.Dropdown(options=eyeviz.yunique,description='Grid Pts',style={'description_width': 'initial'})\n",
+    "s1 = widgets.IntSlider(min=0,max=len(h5f['070/L'].keys())-1,description='Current Image #:',style={'description_width': 'initial'})\n",
+    "s2 = widgets.FloatSlider(value=1.0,min=0.0,max=1.0,step=0.1,description='Opacity OCT:',style={'description_width': 'initial'})\n",
+    "s3 = widgets.FloatSlider(value=1.0,min=0.0,max=1.0,step=0.1,description='Opacity VF_diff:',style={'description_width': 'initial'})\n",
     "\n",
     "def valued1_changed(change):\n",
     "    global h5f\n",
@@ -74,8 +111,31 @@
     "    s1.value = 0\n",
     "d3.observe(valued3_changed, 'value')\n",
     "\n",
-    "interact(ploteyew,patient=d1,eyeside=d2,tness=d3,gridpts=d4,\n",
-    "         t=s1,opacity1=(0.0,1.0,0.1),opacity2=(0.0,1.0,0.1));"
+    "play = widgets.Play(value=0,min=0,max=s1.max,step=1,interval=1500,description=\"Press play\",disabled=False)\n",
+    "left_box = VBox([d1,d2,d3,d4])\n",
+    "middle_box = VBox([s1,s2,s3])\n",
+    "right_box = VBox([play])\n",
+    "controls = HBox([left_box, middle_box, right_box])\n",
+    "\n",
+    "plotwidget = interactive_output(ploteyew, {'patient':d1,\n",
+    "                                            'eyeside':d2,\n",
+    "                                            'tness':d3,\n",
+    "                                            'gridpts':d4,\n",
+    "                                            't':s1,\n",
+    "                                            'opacity1':s2,\n",
+    "                                            'opacity2':s3});\n",
+    "\n",
+    "widgets.jslink((play, 'value'), (s1, 'value'))\n",
+    "totalwidget = widgets.VBox([controls,plotwidget])\n",
+    "display(totalwidget)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "946f4808-e979-48d6-8fe3-6914cc9a9f96",
+   "metadata": {},
+   "source": [
+    "## Graphic #2: the layered image plus plotted difference in OCT values"
    ]
   },
   {
@@ -94,8 +154,8 @@
     "d3 = widgets.Dropdown(options=eyeviz.thickunique,description='Layer',value='GCIPL',style={'description_width': 'initial'})\n",
     "d4 = widgets.Dropdown(options=eyeviz.yunique,description='Grid Pts',style={'description_width': 'initial'})\n",
     "s1 = widgets.IntSlider(min=0,max=len(h5f['070/L'].keys())-1,description='Current Image #:',style={'description_width': 'initial'})\n",
-    "s2 = widgets.FloatSlider(value=1.0,min=0.0,max=1.0,step=0.1,description='Opacity 1:',style={'description_width': 'initial'})\n",
-    "s3 = widgets.FloatSlider(value=1.0,min=0.0,max=1.0,step=0.1,description='Opacity 2:',style={'description_width': 'initial'})\n",
+    "s2 = widgets.FloatSlider(value=1.0,min=0.0,max=1.0,step=0.1,description='Opacity OCT:',style={'description_width': 'initial'})\n",
+    "s3 = widgets.FloatSlider(value=1.0,min=0.0,max=1.0,step=0.1,description='Opacity VF_diff:',style={'description_width': 'initial'})\n",
     "\n",
     "def valued1_changed(change):\n",
     "    global h5f\n",
